--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "genie",
+  "name": "genieacs",
   "version": "0.9.0",
   "description": "A blazing fast TR-069 auto configuration server (ACS) built with node.js and MongoDB",
   "directories": {
