--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zaidka/genie.git"
+    "url": "https://github.com/zaidka/genieacs.git"
   },
   "keywords": [
     "TR-069",
