--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -1,7 +1,7 @@
 {
   "DATABASE_NAME" : "genieacs",
   "MONGODB_SOCKET" : "/tmp/mongodb-27017.sock",
-  "MEMCACHED_SOCKET" : "/tmp/memcached.sock",
+  "REDIS_SOCKET" : "/tmp/redis.sock",
   "ACS_INTERFACE" : "0.0.0.0",
   "ACS_PORT" : 7547,
   "ACS_HTTPS_INTERFACE" : "0.0.0.0",
