--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "libxmljs": "~0.8.1",
-    "memcached": "~0.2.5",
+    "redis": "~0.9.0",
+    "hiredis": "~0.1.15",
     "mongodb": "~1.3.18"
   },
   "devDependencies": {
