--- a/package.json
+++ b/package.json
@@ -2,22 +2,6 @@
   "name": "genieacs",
   "version": "0.9.1",
   "description": "A blazing fast TR-069 auto configuration server (ACS) built with Node.js, Redis, and MongoDB",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "libxmljs": "~0.8.1",
-    "redis": "~0.10.0",
-    "hiredis": "~0.1.15",
-    "mongodb": "~1.3.23"
-  },
-  "devDependencies": {
-    "coffee-script": "~1.7.1"
-  },
-  "scripts": {
-    "prepublish": "coffee -c *.coffee",
-    "test": "node test"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/zaidka/genieacs.git"
@@ -28,6 +12,29 @@
     "ACS"
   ],
   "author": "Zaid Abdulla",
-  "license": "MIT",
-  "readmeFilename": "README.md"
+  "license": "AGPL3",
+  "readmeFilename": "README.md",
+  "directories": {
+    "test": "test",
+    "bin": "bin"
+  },
+  "dependencies": {
+    "libxmljs": "~0.8.1",
+    "redis": "~0.10.0",
+    "hiredis": "~0.1.15",
+    "mongodb": "~1.3.23"
+  },
+  "devDependencies": {
+    "coffee-script": "~1.7.1"
+  },
+  "engines": {
+    "node": ">=0.10.0 <0.12"
+  },
+  "scripts": {
+    "prepublish": "npm run compile",
+    "compile": "./node_modules/.bin/coffee -c *.coffee test/*.coffee tools/*.coffee",
+    "configure": "cp config/config-sample.json config/config.json; cp config/parameters-sample.json config/parameters.json; cp config/custom_commands-sample.json config/custom_commands.json; cp config/auth-sample.js config/auth.js",
+    "install": "npm run configure",
+    "test": "node test"
+  }
 }
