--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -1,15 +1,15 @@
 {
-  "MONGODB_CONNECTION_URL" : "mongodb://localhost/genieacs",
-  "REDIS_SOCKET" : "6379",
-  "ACS_INTERFACE" : "0.0.0.0",
-  "ACS_PORT" : 7547,
-  "ACS_HTTPS_INTERFACE" : "0.0.0.0",
-  "ACS_HTTPS_PORT" : 7548,
-  "API_INTERFACE" : "0.0.0.0",
-  "API_PORT" : 7557,
-  "FILES_INTERFACE" : "0.0.0.0",
-  "FILES_PORT" : 7567,
+  "MONGODB_CONNECTION_URL" : "mongodb://127.0.0.1/genieacs",
+  "REDIS_PORT" : "6379",
+  "REDIS_HOST" : "127.0.0.1",
+  "CWMP_INTERFACE" : "0.0.0.0",
+  "CWMP_PORT" : 7547,
+  "CWMP_SSL" : false,
+  "NBI_INTERFACE" : "0.0.0.0",
+  "NBI_PORT" : 7557,
+  "FS_INTERFACE" : "0.0.0.0",
+  "FS_PORT" : 7567,
   "FILES_IP" : "192.168.0.1",
   "LOG_INFORMS" : true,
-  "DEBUG_DEVICES" : {}
+  "DEBUG" : false
 }
