--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "prepublish": "npm run compile",
-    "compile": "coffee -cb lib/*.coffee test/*.coffee tools/*.coffee",
+    "compile": "coffee -cb lib/*.coffee",
     "configure": "cp ./config/config-sample.json ./config/config.json",
     "install": "npm run configure",
     "test": "node test"
