Update .gitignore and .npmignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
 *~
-*.js
 lib/*.map
+lib/api-functions.js
+lib/auth.js
+lib/cache.js
+lib/common.js
+lib/config.js
+lib/cwmp.js
+lib/db.js
+lib/fs.js
+lib/nbi.js
+lib/query.js
+lib/server.js
+lib/session.js
 node_modules
-debug/*
+debug
+config/auth.js
+config/config.json
+config/cwmp.key
+config/cwmp.crt
+config/cwmp.ca-bundle
+config/nbi.key
+config/nbi.crt
+config/nbi.ca-bundle
+config/fs.key
+config/fs.crt
+config/fs.ca-bundle
+config/ext
