--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genieacs",
-  "version": "1.1.0-alpha",
+  "version": "1.1.0",
   "description": "A TR-069 Auto Configuration Server (ACS)",
   "repository": {
     "type": "git",
