Change FS_HOSTNAME to acs.example.com and removed LOG_INFORMS in config-sample.json

--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -9,7 +9,6 @@
   "NBI_PORT" : 7557,
   "FS_INTERFACE" : "0.0.0.0",
   "FS_PORT" : 7567,
-  "FS_HOSTNAME" : "192.168.0.1",
-  "LOG_INFORMS" : true,
+  "FS_HOSTNAME" : "acs.example.com",
   "DEBUG" : false
 }
