adding UDP port bing config option

--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -10,5 +10,7 @@
   "FS_INTERFACE" : "0.0.0.0",
   "FS_PORT" : 7567,
   "FS_HOSTNAME" : "acs.example.com",
+  "UDP_PORT_BIND": false,
+  "UDP_PORT": 3478,
   "DEBUG" : false
 }
