--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "bin": "bin"
   },
   "dependencies": {
-    "hiredis": "^0.5.0",
     "later": "^1.2.0",
     "libxmljs": "^0.18.4",
     "mongodb": "^2.2.24",
-    "redis": "^2.6.5",
     "seedrandom": "^2.4.2"
+  },
+  "optionalDependencies": {
+    "redis": "^2.6.5"
   },
   "devDependencies": {
     "coffeescript": "^1.12.4"
