--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "env": {
-    "browser": true,
-    "commonjs": true
+    "browser": true
+  },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 8
   }
 }
