Implement download tasks

--- a/config.json
+++ b/config.json
@@ -11,8 +11,10 @@
   "permissions.admin.1.devices.validate.pass": true,
   "permissions.admin.1.faults.access": 3,
   "permissions.admin.1.faults.validate.pass": true,
+  "permissions.admin.1.files.access": 3,
   "permissions.view.1.devices.access": 2,
   "permissions.view.1.faults.access": 2,
+  "permissions.view.1.files.access": 2,
   "ui.pageSize": 10,
   "ui.filters.1.label": "Serial number",
   "ui.filters.1.parameter": "DeviceID.SerialNumber",
