--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "prefer-arrow-callback": "error",
     "curly": ["error", "multi-or-nest", "consistent"],
     "consistent-return": ["error", {"treatUndefinedAsUnspecified": true}],
-    "no-buffer-constructor": "error"
+    "no-buffer-constructor": "error",
+    "prefer-const": ["error", {"destructuring": "all"}]
   }
 }
