Add logging functionality
Add logging on every API call, and on server starting and listenning.

--- a/config.json
+++ b/config.json
@@ -282,5 +282,9 @@
         "type": "device-actions"
       }
     ]
+  },
+  "logger": {
+    "logFormat": "simple",
+    "accessLogFormat": "simple"
   }
 }
