Add provisions page

--- a/config.json
+++ b/config.json
@@ -42,6 +42,12 @@
             "pass": true
           }
         },
+        "provisions" : {
+          "access": 3,
+          "validate": {
+            "pass": true
+          }
+        },
         "files": {
           "access": 3
         }
@@ -56,6 +62,9 @@
           "access": 2
         },
         "presets": {
+          "access": 2
+        },
+        "provisions": {
           "access": 2
         },
         "files": {
