--- a/config.json
+++ b/config.json
@@ -55,7 +55,10 @@
           }
         },
         "files": {
-          "access": 3
+          "access": 3,
+          "validate": {
+            "pass": true
+          }
         }
       }
     ],
