Add linting rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
     "no-shadow": ["error", { "allow": ["err"] }],
     "handle-callback-err": "error",
     "prefer-arrow-callback": "error",
-    "curly": ["error", "multi", "consistent"]
+    "curly": ["error", "multi-or-nest", "consistent"],
+    "consistent-return": ["error", {"treatUndefinedAsUnspecified": true}],
+    "no-buffer-constructor": "error",
+    "prefer-const": ["error", {"destructuring": "all"}]
   }
 }
