--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongodb": "^3.1.1",
-    "parsimmon": "^1.12.0"
+    "parsimmon": "^1.12.0",
+    "yaml": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
